# ic-cosmos-research

./: Cargo.toml  README.md  dfx.json  rust-toolchain.toml
src/.github/workflows/: ci.yml
src/ic-cosmos/: Cargo.toml
src/ic-cosmos-backend/: Cargo.toml
src/ic-cosmos-provider/: Cargo.toml
src/ic-cosmos-rpc/: Cargo.toml
src/ic-cosmos-rpc/src/: auth.rs  http.rs  main.rs  providers.rs  state.rs  utils.rs
src/ic-cosmos-wallet/: Cargo.toml
src/ic-cosmos-wallet/src/: ecdsa.rs  lib.rs  main.rs  state.rs
src/ic-cosmos/src/: lib.rs
src/ic-cosmos/src/rpc_client/: types.rs
src/ic-cosmos/src/types/: cluster.rs
src/test-utils/src/: lib.rs  mock.rs  utils.rs
