[workspace]
members = [
    "src/ic-cosmos-provider"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = "Interact with the Cosmos Interchain from the Internet Computer"
keywords = ["icp", "web3", "cosmos", "rpc", "canister"]
authors = ["Poroburu <poroburu@gmail.com>"]
repository = "https://github.com/poroburu/ic-cosmos"
homepage = "https://github.com/poroburu/ic-cosmos"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
# Core IC dependencies
candid = "0.10"
ic-cdk = "0.16"
ic-types = "0.7"
ic-canister-log = "0.2"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", package = "ic-canisters-http-types" }
ic-crypto-ed25519 = { git = "https://github.com/dfinity/ic", package = "ic-crypto-ed25519" }
ic-management-canister-types = { git = "https://github.com/dfinity/ic", package = "ic-management-canister-types" }
ic-metrics-encoder = "1.1"
ic-stable-structures = "0.6.5"

# Project-specific dependencies
ic-cosmos-provider = { path = "src/ic-cosmos-provider" }

# Additional utilities
pocket-ic = "5.0.0"
serde = "1"
serde_json = "1.0"
serde_bytes = "0.11"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

# Required by `ic-test-utilities-load-wasm`
[profile.canister-release]
inherits = "release"


