[package]
name = "ic-cosmos-rpc"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-canister-log = { workspace = true }
ic-canisters-http-types = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-cosmos = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pocket-ic = { workspace = true }
ic-test-utilities-load-wasm = { workspace = true }
serde_bytes = { workspace = true }
test-utils = { workspace = true }
